Add server port

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -133,7 +133,8 @@
     "    outputs=[\n",
     "        \"numpy\"\n",
     "    ],\n",
-    "    description=\"Enter iris characteristics here:\"\n",
+    "    description=\"Enter iris characteristics here:\",\n",
+    "    server_port=8080,\n",
     ")\n",
     "iface.launch()"
    ]
